# common_ground_ontology

./: .gitignore  CG_agents.owl  CG_area.owl  CG_building.owl  CG_context.owl  CG_entities.owl  CG_env_interaction.owl  CG_geometric.owl  CG_objects.owl  CG_root.owl  CMakeLists.txt  package.xml  ris_agents.owl
meshes/furnitures/: ikea_kallax.stl  ikea_low_table_lack.stl  round_table.stl
