<?xml version="1.0"?>
<package format="2">
  <name>common_ground_ontology</name>
  <version>0.0.0</version>
  <description>The common_ground_ontology package</description>

  <maintainer email="gsarthou@laas.fr">gsarthou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
